Fixed image overflow on about pages. Changed to gallery div in css file.

--- a/Pages/About/styles.css
+++ b/Pages/About/styles.css
@@ -49,6 +49,7 @@ nav ul li a {
     display: flex; 
     justify-content: space-around; 
     margin-top: 20px; 
+    overflow-x: auto;
 }
 
 #gallery img {
@@ -58,7 +59,7 @@ nav ul li a {
     border-radius: 5px; 
     margin: 0 10px; 
 }
-
+ 
 /* Footer styles */
 footer {
     background-color: #333; 
